--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -16,15 +16,22 @@
     <item name="toolbar_mainactivity" type="id"/>
     <item name="btn_mainactivity_toolbar_date" type="id"/>
     <item name="view_mainactivity_scrim" type="id"/>
-    <item name="rv_mainactivity_content" type="id"/>
+    <item name="rv_mainactivity_account" type="id"/>
+    <item name="cv_mainactivity_account" type="id"/>
+    <item name="rv_mainactivity_dates" type="id"/>
+    <item name="cv_mainactivity_dates" type="id"/>
+
+    <item name="constraintlayout_mainactivity_bgtop" type="id"/>
+    <item name="constraintlayout_mainactivity_bgbottom" type="id"/>
 
     <item name="rv_accountmanage_content" type="id"/>
     <item name="cv_accountmanage" type="id"/>
     <item name="tv_accountmanage_accountname" type="id"/>
     <item name="tv_accountmanage_accountbalance" type="id"/>
+    <item name="group_accountmanage_cardconti" type="id"/>
+
     <item name="img_edit_account" type="id"/>
     <item name="img_delete_account" type="id"/>
-    <item name="group_accountmanage_cardconti" type="id"/>
 
 
 
