--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -24,9 +24,12 @@
     <item name="view_mainactivity_scrim" type="id"/>
     <item name="rv_mainactivity_account" type="id"/>
 
+    <item name="bottomsheet_mainactivity_container" type="id"/>
+    <item name="tv_mainactivity_bottomsheet_label" type="id"/>
+    <item name="fl_mainactivity_bottomsheet_content" type="id"/>
+
     <item name="cv_mainactivity_account" type="id"/>
     <item name="rv_mainactivity_dates" type="id"/>
-
     <item name="tv_mainactivity_dates_day" type="id"/>
     <item name="tv_mainactivity_dates_month" type="id"/>
     <item name="rv_mainactivity_transactions" type="id"/>
