--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -29,6 +29,9 @@
     <item name="fl_mainactivity_bottomsheet_content" type="id"/>
 
     <item name="cv_mainactivity_account" type="id"/>
+    <item name="tv_mainactivity_current" type="id"/>
+    <item name="tv_mainactivity_estimated" type="id"/>
+
     <item name="rv_mainactivity_dates" type="id"/>
     <item name="tv_mainactivity_dates_day" type="id"/>
     <item name="tv_mainactivity_dates_month" type="id"/>
