--- a/app/src/main/res/layout/card_mainactivity_account.xml
+++ b/app/src/main/res/layout/card_mainactivity_account.xml
@@ -42,9 +42,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
+                    android:fontFamily="@font/krub_extra_light"
+                    android:text="Cassa di Risparmio Di Volterra"
                     android:textColor="@color/white"
-                    android:textSize="24sp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
+                    android:typeface="monospace"
                     card_view:layout_constraintStart_toStartOf="parent"
                     card_view:layout_constraintTop_toTopOf="parent" />
 
@@ -80,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/kodchasan_extralight"
                     android:textAlignment="viewEnd"
                     android:textColor="@color/white"
                     android:textSize="30sp"
@@ -135,6 +139,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/kodchasan_extralight"
                     android:textAlignment="viewEnd"
                     android:textColor="@color/white"
                     android:textSize="30sp"
