--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight=".9"
+                    android:fontFamily="@font/hindvadodara_semibold"
                     android:gravity="center_vertical"
                     android:text="@string/balances_up_to"
                     android:textAlignment="center"
