--- a/app/src/main/res/layout/card_all_dates.xml
+++ b/app/src/main/res/layout/card_all_dates.xml
@@ -39,6 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:fontFamily="@font/josefinsans_light"
                 android:text="10"
                 android:textAlignment="center"
                 android:textColor="@color/almost_black"
@@ -55,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/josefinsans_light"
                 android:padding="0dp"
                 android:text="AGO"
                 android:textAlignment="center"
