--- a/app/src/main/res/layout/fragment_mainactivity_insert.xml
+++ b/app/src/main/res/layout/fragment_mainactivity_insert.xml
@@ -21,34 +21,32 @@
         app:srcCompat="@drawable/ic_save_black_24dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@id/btn_mainactivity_bottomsheet_income"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:backgroundTint="@android:color/transparent"
-        android:elevation="0dp"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        android:elevation="1dp"
+        android:text="@string/btn_mainactivity_income_label"
+        app:layout_constraintEnd_toStartOf="@id/btn_mainactivity_bottomsheet_outcome"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_save_transaction" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@id/btn_mainactivity_bottomsheet_outcome"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:backgroundTint="@android:color/transparent"
-        android:elevation="0dp"
-        android:text="Button"
+        android:elevation="1dp"
+        android:text="@string/btn_mainactivity_outcome_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@id/btn_mainactivity_bottomsheet_income"
         app:layout_constraintTop_toBottomOf="@+id/btn_save_transaction" />
 
     <android.support.design.widget.TextInputLayout
@@ -60,7 +58,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        app:layout_constraintTop_toBottomOf="@id/btn_mainactivity_bottomsheet_income">
 
         <AutoCompleteTextView
             android:id="@+id/inputBeneficiario"
