--- a/app/src/main/res/layout/card_all_income.xml
+++ b/app/src/main/res/layout/card_all_income.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-
+        android:fontFamily="@font/kodchasan_extralight"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:textAlignment="center"
@@ -114,6 +114,7 @@
 
     <TextView
         android:id="@id/tv_card_all_beneficiario"
+        android:fontFamily="@font/hindvadodara_semibold"
 
         style="@style/text_style_beneficiario"
         android:layout_width="wrap_content"
