--- a/app/src/main/res/layout/card_all_outcome.xml
+++ b/app/src/main/res/layout/card_all_outcome.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:layout_gravity="center"
         android:orientation="vertical"
         tools:layout_editor_absoluteY="273dp">
