--- a/app/src/main/res/layout/card_all_outcome_check.xml
+++ b/app/src/main/res/layout/card_all_outcome_check.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:background="@color/white"
     android:backgroundTint="@color/white"
     android:layout_gravity="center"
@@ -18,11 +17,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:fontFamily="@font/kodchasan_extralight"
+
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/kodchasan_extralight"
+        android:text="352,12€"
         android:textAlignment="center"
-        android:textColor="@color/green"
+        android:textColor="@color/grey_bg_black_text"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -84,7 +85,7 @@
         android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_trans_in"
+        app:srcCompat="@drawable/ic_arrow_forward_grey_24dp"
         tools:layout_conversion_absoluteHeight="54dp"
         tools:layout_conversion_absoluteWidth="28dp" />
 
@@ -116,17 +117,18 @@
 
     <TextView
         android:id="@id/tv_card_all_beneficiario"
-        android:fontFamily="@font/hindvadodara_semibold"
 
         style="@style/text_style_beneficiario"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="38dp"
+        android:fontFamily="@font/hindvadodara_semibold"
         android:textAlignment="center"
-        android:textColor="@color/almost_black"
+        android:textColor="@color/grey_bg_black_text"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_card_all_importo"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_conversion_absoluteHeight="25dp"
         tools:layout_conversion_absoluteWidth="1dp" />
 
