--- a/app/src/main/res/layout/fragment_mainactivity_insert.xml
+++ b/app/src/main/res/layout/fragment_mainactivity_insert.xml
@@ -45,7 +45,7 @@
                 android:layout_marginTop="20dp"
 
                 android:layout_marginBottom="20dp"
-                android:text="Trascina per filtrare..."
+                android:text="Trascina per aggiungere un movimento..."
                 android:textAlignment="center"
                 android:textSize="14sp"
                 android:textStyle="italic"
