fixing merging from 0.8.1

--- a/app/src/main/res/layout/activity_accountmanage.xml
+++ b/app/src/main/res/layout/activity_accountmanage.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.franc.mygest.activities.AccountsManageActivity"
-    tools:showIn="@layout/activity_crea_conto">
+    >
 
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/rv_account_manage">
+        android:id="@id/rv_accountmanage_content">
 
     </android.support.v7.widget.RecyclerView>
 
