--- a/app/src/main/res/layout/navigation_drawer_filter.xml
+++ b/app/src/main/res/layout/navigation_drawer_filter.xml
@@ -4,17 +4,19 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:fitsSystemWindows="true"
-    android:clickable="true"
     android:focusableInTouchMode="true">
 
 
-    <include layout="@layout/filter_activity_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+        <include
+            layout="@layout/activity_filter"
+            />
+
+
 
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/navigationview_main"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:layout_gravity="start"
